# v-c-backupd

./: .gitignore  README.md  meson.build
include/backupd/: commandline.h  components.h  status_codes.h
include/backupd/command/: help.h  root.h  start.h
include/backupd/status_codes/: commandline.h  general.h
src/backupd/: main.c
src/command/help/: help_print.c  process_help_command.c
src/command/root/: dispatch_root_commands.c  root_command_init.c
src/command/start/: process_start_command.c  start_command_func.c  start_command_init.c
src/commandline/: command_execute.c  commandline_opts_init.c
subprojects/: vcblockchain.wrap  vctool.wrap  vpr.wrap
